--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,28 @@
 
 ## Completion of feature set
 
-- Numbers.  The current stuff for 0.8 needs to be
-  implemented.
-    (pending.  fbennett 2009-04-17)
+- Erratum: raw date variables.  These should render as
+  2000-12-01 when they appear as the argument to a text
+  element.  Important for sort keys, as the raw variable
+  is used all over the place in existing styles.
+    (awaits test submission.  fbennett 2009-05-18)
+
+- Erratum: suppression of elements.  Doesn't seem to be
+  any mechanism in place for restraining variables from
+  rendering more than once in a citation.  The mark_output
+  function should be extended to support this, with an
+  appropriate hook in the output queue (?).
+    (awaits test submission.  fbennett 2009-05-18)
+
+- Erratum: groups as atoms within substitute span.  There
+  will likely be a demand from CSL that raw top-level 
+  groups in a substitute span behave as a single element.
+  This will require that Configure set jump points on
+  these elements, with extension functions to manage
+  the jump and take note of successful evaluation.  Really
+  hope this can be avoided, but I sense insistence in the
+  wind.
+    (awaits test submission.  fbennett 2009-05-18)
 
 - Handle position evaluation and back-references inside the 
   processor via the registry.  Zotero's own position evaluation 
@@ -15,6 +34,11 @@
   First step will be to draw my positioning patches to
   integration.js into the citeproc-js code base, and figure out
   how to stitch it in via an extension to the registry.
+  NOTE: this is on hold pending guidance from Zotero on (a) whether
+  this functionality is desirable, and (b) whether it is possible
+  to receive note numbers and predecessors from the plugins on
+  each transaction.  In any case, not to be implemented until
+  the specifics of the transaction protocol are known.
     (pending fbennett 2009-04-17)
 
 - Various options and special formatting attributes need to be
@@ -24,13 +48,9 @@
 
 ## Possible work for Zotero deployment
 
-- Deletion support for the registry.
-    (pending.  fbennett 2009-04-11)
-
-- Processor to report the full list of fields required to render
-  any item in the compiled style, to permit the application to
-  optimize database fetches?
-    (pending.  fbennett 2009-04-11)
+- Anything on which I receive guidance.  No requests
+  pending at present.
+    (fbennett 2009-05-18)
 
 
 ## Possible proposals for CSL
@@ -42,5 +62,3 @@
 
 - Localized date formatting?
     (pending.  fbennett 2009-04-11)
-
-
