--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,11 @@
 
 ## Completion of feature set
 
+- Erratum: unparsed dates.  The input object for dates
+  should include a "literal" attribute, which renders
+  instead of the formatted date if the "year" attribute
+  is nil.
+
 - Erratum: raw date variables.  These should render as
   2000-12-01 when they appear as the argument to a text
   element.  Important for sort keys, as the raw variable
@@ -15,14 +20,15 @@
   appropriate hook in the output queue (?).
     (awaits test submission.  fbennett 2009-05-18)
 
-- Erratum: groups as atoms within substitute span.  There
-  will likely be a demand from CSL that raw top-level 
-  groups in a substitute span behave as a single element.
-  This will require that Configure set jump points on
-  these elements, with extension functions to manage
-  the jump and take note of successful evaluation.  Really
-  hope this can be avoided, but I sense insistence in the
-  wind.
+- Erratum: all spanned top-level elements within
+  a substitute span need to be treated as well-behaved
+  conditionals, setting the substitute rendering flag to
+  false if they render something, and skipping unless
+  that value is true.  This will require (a) that the
+  code to cast these elements with appropriate conditional
+  wrappers be refactored as a discrete function, and
+  (b) that the output queue itself set a return value somewhere
+  to indicate whether or not something rendered.
     (awaits test submission.  fbennett 2009-05-18)
 
 - Handle position evaluation and back-references inside the 
