Further update to TODO.txt

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,18 @@
   will display the field in the form it will appear in
   the document.
 
+- Provide a "divide" method that splits a string into 
+  "mutable" and "preserve" forks, with index hints to
+  be used in recombine the two forks using a "conquer"
+  method.
+
+- Provide discrete handling for "function" and "tag" types
+  of decoration.  The latter work as at present, with
+  simple nested application.  The former will require
+  the divide and conquer mechanism described above,
+  and will apply only to the "mutable" fork of the
+  string.
+
 - For inline markup, do not recognize purely presentational
   elements at top level; require semantic markup tags around
   everything that is to be specially formatted.  Stray
