--- a/locale/locales-fr-FR.xml
+++ b/locale/locales-fr-FR.xml
@@ -11,7 +11,7 @@
     <term name="references">références</term>
     <term name="no date">pas de date</term>
     <term name="and">et</term>
-    <term name="et-al">et coll.</term>
+    <term name="et-al">et al.</term>
     <term name="interview">interview</term>
     <term name="letter">lettre</term>
     <term name="anonymous">anonyme</term>
