Revert references term in en-US locale to original singlular-only form.  Need a separate term to support in-text referencing, because semantic meaning of this term differs.

--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -8,10 +8,7 @@
     <term name="retrieved">retrieved</term>
     <term name="from">from</term>
     <term name="forthcoming">forthcoming</term>
-    <term name="reference">
-      <single>reference</single>
-      <multiple>references</multiple>
-    </term>
+    <term name="references">references</term>
     <term name="no date">n.d.</term>
     <term name="and">and</term>
     <term name="et-al">et al.</term>
