Add reference item term to all locales.

--- a/locale/locales-ru-RU.xml
+++ b/locale/locales-ru-RU.xml
@@ -9,6 +9,10 @@
     <term name="from">от</term>
     <term name="forthcoming">грядущие</term>
     <term name="references">Ссылки</term>
+    <term name="reference item">
+      <single>source</single>
+      <multiple>sources</multiple>
+    </term>
     <term name="no date">нет даты</term>
     <term name="and">и</term>
     <term name="et-al">и др.</term>
