--- a/locale/locales-es-ES.xml
+++ b/locale/locales-es-ES.xml
@@ -9,6 +9,10 @@
     <term name="from">a partir de</term>
     <term name="forthcoming">previsto</term>
     <term name="references">Referencias</term>
+    <term name="reference item">
+      <single>source</single>
+      <multiple>sources</multiple>
+    </term>
     <term name="no date">s.d.</term>
     <term name="and">y</term>
     <term name="et-al">et al.</term>
