--- a/locale/locales-nb-NO.xml
+++ b/locale/locales-nb-NO.xml
@@ -9,6 +9,10 @@
     <term name="from">fra</term>
     <term name="forthcoming">kommende</term>
     <term name="references">referanser</term>
+    <term name="reference item">
+      <single>source</single>
+      <multiple>sources</multiple>
+    </term>
     <term name="no date">udatert</term>
     <term name="and">og</term>
     <term name="et-al">mfl</term>
