--- a/locale/locales-ro-RO.xml
+++ b/locale/locales-ro-RO.xml
@@ -9,6 +9,10 @@
     <term name="from">din</term>
     <term name="forthcoming">în curs de apariţie</term>
     <term name="references">Bibliografie</term>
+    <term name="reference item">
+      <single>source</single>
+      <multiple>sources</multiple>
+    </term>
     <term name="no date">f.a.</term>
     <term name="and">şi</term>
     <term name="et-al">et al.</term>
