--- a/locale/locales-sk-SK.xml
+++ b/locale/locales-sk-SK.xml
@@ -9,6 +9,10 @@
     <term name="from">z</term>
     <term name="forthcoming">nadchádzajúci</term>
     <term name="references">referencie</term>
+    <term name="reference item">
+      <single>source</single>
+      <multiple>sources</multiple>
+    </term>
     <term name="no date">n.d.</term>
     <term name="and">a</term>
     <term name="et-al">et al</term>
