--- a/locale/locales-uk-UA.xml
+++ b/locale/locales-uk-UA.xml
@@ -9,6 +9,10 @@
     <term name="from">із</term>
     <term name="forthcoming">forthcoming</term>
     <term name="references">посилання</term>
+    <term name="reference item">
+      <single>source</single>
+      <multiple>sources</multiple>
+    </term>
     <term name="no date">n.d.</term>
     <term name="and">і</term>
     <term name="et-al">et al.</term>
