Add quotes to locales.  English throughout, will need to be adjusted by language.

--- a/locale/locales-bg-BG.xml
+++ b/locale/locales-bg-BG.xml
@@ -26,6 +26,7 @@
     <term name="cited">цитиран</term>
     <term name="internet">интернет</term>
     <term name="presented at">представен на</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">антропология</term>
     <term name="astronomy">астрономия</term>
     <term name="biology">биология</term>
