--- a/locale/locales-pl-PL.xml
+++ b/locale/locales-pl-PL.xml
@@ -26,6 +26,7 @@
     <term name="cited">cytowane</term>
     <term name="internet">internet</term>
     <term name="presented at">zaprezentowano</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">antropologia</term>
     <term name="astronomy">astronomia</term>
     <term name="biology">biologia</term>
