--- a/locale/locales-de-DE.xml
+++ b/locale/locales-de-DE.xml
@@ -26,6 +26,7 @@
     <term name="cited">zitiert</term>
     <term name="internet">Internet</term>
     <term name="presented at">gehalten auf der</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">Anthropologie</term>
     <term name="astronomy">Astronomie</term>
     <term name="biology">Biologie</term>
