--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -26,6 +26,7 @@
     <term name="cited">cited</term>
     <term name="internet">internet</term>
     <term name="presented at">presented at the</term>
+    <term name="quotes">|“|”|‘|’|</term>
     
     <!-- CATEGORIES -->
     <term name="anthropology">anthropology</term>
