--- a/locale/locales-fr-FR.xml
+++ b/locale/locales-fr-FR.xml
@@ -26,6 +26,7 @@
     <term name="cited">cité</term>
     <term name="internet">Internet</term>
     <term name="presented at">présenté au</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">anthropologie</term>
     <term name="astronomy">astronomie</term>
     <term name="biology">biologie</term>
