--- a/locale/locales-it-IT.xml
+++ b/locale/locales-it-IT.xml
@@ -26,6 +26,7 @@
     <term name="cited">citato</term>
     <term name="internet">internet</term>
     <term name="presented at">presentato al</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">antropologia</term>
     <term name="astronomy">astronomia</term>
     <term name="biology">biologia</term>
