--- a/locale/locales-nb-NO.xml
+++ b/locale/locales-nb-NO.xml
@@ -26,6 +26,7 @@
     <term name="cited">cited</term>
     <term name="internet">Internett</term>
     <term name="presented at">presentert på</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">antropologi</term>
     <term name="astronomy">astronomi</term>
     <term name="biology">biologi</term>
