--- a/locale/locales-nl-NL.xml
+++ b/locale/locales-nl-NL.xml
@@ -26,6 +26,7 @@
     <term name="cited">geciteerd</term>
     <term name="internet">internet</term>
     <term name="presented at">gepresenteerd bij</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">anthropologie</term>
     <term name="astronomy">astronomie</term>
     <term name="biology">biologie</term>
