--- a/locale/locales-pt-BR.xml
+++ b/locale/locales-pt-BR.xml
@@ -26,6 +26,7 @@
     <term name="cited">citado</term>
     <term name="internet">internet</term>
     <term name="presented at">apresentado em</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">antropologia</term>
     <term name="astronomy">astronomia</term>
     <term name="biology">biologia</term>
