--- a/locale/locales-sk-SK.xml
+++ b/locale/locales-sk-SK.xml
@@ -26,6 +26,7 @@
     <term name="cited">cit</term>
     <term name="internet">internet</term>
     <term name="presented at">prezentované na</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">antropológia</term>
     <term name="astronomy">astronómia</term>
     <term name="biology">biológia</term>
