--- a/locale/locales-sr-RS.xml
+++ b/locale/locales-sr-RS.xml
@@ -26,6 +26,7 @@
     <term name="cited">цитирано</term>
     <term name="internet">Интернет</term>
     <term name="presented at">представљено на</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">антропологија</term>
     <term name="astronomy">астрономија</term>
     <term name="biology">биологија</term>
