--- a/locale/locales-sv-SE.xml
+++ b/locale/locales-sv-SE.xml
@@ -26,6 +26,7 @@
     <term name="cited">citerad</term>
     <term name="internet">internet</term>
     <term name="presented at">presenterad vid</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">antropologi</term>
     <term name="astronomy">astronomi</term>
     <term name="biology">biologi</term>
