--- a/locale/locales-tr-TR.xml
+++ b/locale/locales-tr-TR.xml
@@ -26,6 +26,7 @@
     <term name="cited">kaynak</term>
     <term name="internet">internet</term>
     <term name="presented at">sunulan</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">antropoloji</term>
     <term name="astronomy">astronomi</term>
     <term name="biology">biyoloji</term>
