--- a/locale/locales-uk-UA.xml
+++ b/locale/locales-uk-UA.xml
@@ -26,6 +26,7 @@
     <term name="cited">cited</term>
     <term name="internet">інтернет</term>
     <term name="presented at">presented at the</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">антропологія</term>
     <term name="astronomy">астрономія</term>
     <term name="biology">біологія</term>
