--- a/locale/locales-zh-TW.xml
+++ b/locale/locales-zh-TW.xml
@@ -26,6 +26,7 @@
     <term name="cited">被引用</term>
     <term name="internet">網際網路</term>
     <term name="presented at">簡報於</term>
+    <term name="quotes">|“|”|‘|’|</term>
     <term name="anthropology">人類學</term>
     <term name="astronomy">天文學</term>
     <term name="biology">生物學</term>
