--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -26,7 +26,8 @@
     <term name="cited">cited</term>
     <term name="internet">internet</term>
     <term name="presented at">presented at the</term>
-    <term name="quotes">|“|”|‘|’|</term>
+    <term name="quotes-in">|“|”|‘|’|'|'|"|"|</term>
+    <term name="quotes-out">|“|”|‘|’|</term>
     
     <!-- CATEGORIES -->
     <term name="anthropology">anthropology</term>
