--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <terms xmlns="http://purl.org/net/xbiblio/csl">
   <locale xml:lang="en">
+    <term name="bogus">bogus</term>
     <term name="at">at</term>
     <term name="in">in</term>
     <term name="ibid">ibid</term>
