--- a/locale/locales-af-AZ.xml
+++ b/locale/locales-af-AZ.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="af">
+<locale xml:lang="af" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">at</term>
     <term name="in">in</term>
     <term name="ibid">ibid</term>
@@ -147,5 +147,5 @@
     <term name="month-10" form="short">Okt</term>
     <term name="month-11" form="short">Nov</term>
     <term name="month-12" form="short">Des</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
