--- a/locale/locales-ar-AR.xml
+++ b/locale/locales-ar-AR.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="ar">
+<locale xml:lang="ar" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">عند</term>
     <term name="in">في</term>
     <term name="ibid">آيبيد</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">اكتوبر</term>
     <term name="month-11" form="short">نوفمبر</term>
     <term name="month-12" form="short">ديسمبر</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
