--- a/locale/locales-es-ES.xml
+++ b/locale/locales-es-ES.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="es">
+<locale xml:lang="es" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">en</term>
     <term name="in">en</term>
     <term name="ibid">ibid</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">Oct</term>
     <term name="month-11" form="short">Nov</term>
     <term name="month-12" form="short">Dic</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
