--- a/locale/locales-ko-KR.xml
+++ b/locale/locales-ko-KR.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="ko">
+<locale xml:lang="ko" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">at</term>
     <term name="in">in</term>
     <term name="ibid">ibid</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">10</term>
     <term name="month-11" form="short">11</term>
     <term name="month-12" form="short">12</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
