--- a/locale/locales-nb-NO.xml
+++ b/locale/locales-nb-NO.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="nb">
+<locale xml:lang="nb" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">på</term>
     <term name="in">i</term>
     <term name="ibid">ibid</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">Okt</term>
     <term name="month-11" form="short">Nov</term>
     <term name="month-12" form="short">Des</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
