--- a/locale/locales-pt-BR.xml
+++ b/locale/locales-pt-BR.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="pt">
+<locale xml:lang="pt" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">em</term>
     <term name="in">in</term>
     <term name="ibid">ibidem</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">out</term>
     <term name="month-11" form="short">nov</term>
     <term name="month-12" form="short">dez</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
