--- a/locale/locales-ro-RO.xml
+++ b/locale/locales-ro-RO.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="ro">
+<locale xml:lang="ro" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">la</term>
     <term name="in">în</term>
     <term name="ibid">ibidem</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">oct</term>
     <term name="month-11" form="short">nov</term>
     <term name="month-12" form="short">dec</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
