--- a/locale/locales-ru-RU.xml
+++ b/locale/locales-ru-RU.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="ru">
+<locale xml:lang="ru" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">at</term>
     <term name="in">в</term>
     <term name="ibid">так же</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">Окт</term>
     <term name="month-11" form="short">Ноя</term>
     <term name="month-12" form="short">Дек</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
