--- a/locale/locales-sr-RS.xml
+++ b/locale/locales-sr-RS.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="sr">
+<locale xml:lang="sr" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">на</term>
     <term name="in">у</term>
     <term name="ibid">ibid</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">Окт.</term>
     <term name="month-11" form="short">Нов.</term>
     <term name="month-12" form="short">Дец.</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
