--- a/locale/locales-tr-TR.xml
+++ b/locale/locales-tr-TR.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<terms xmlns="http://purl.org/net/xbiblio/csl">
-  <locale xml:lang="tr">
+<locale xml:lang="tr" xmlns="http://purl.org/net/xbiblio/csl">
+  <terms>
     <term name="at">de</term>
     <term name="in">içinde</term>
     <term name="ibid">ibid</term>
@@ -207,5 +207,5 @@
     <term name="month-10" form="short">Eki</term>
     <term name="month-11" form="short">Kas</term>
     <term name="month-12" form="short">Ara</term>
-  </locale>
-</terms>
+  </terms>
+</locale>
