--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -5,6 +5,10 @@
   </options>
   <terms>
     <term name="bogus">bogus</term>
+    <term name="open-quote">“</term>
+    <term name="close-quote">”</term>
+    <term name="open-inner-quote">‘</term>
+    <term name="close-inner-quote">’</term>
     <term name="at">at</term>
     <term name="in">in</term>
     <term name="ibid">ibid</term>
