--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <locale xml:lang="en" xmlns="http://purl.org/net/xbiblio/csl">
   <options>
-    <option name="punctuation-in-quote" value="false"/>
+    <option name="punctuation-in-quote" value="true"/>
   </options>
   <terms>
     <term name="bogus">bogus</term>
