--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -38,7 +38,7 @@
     <term name="interview">interview</term>
     <term name="letter">letter</term>
     <term name="anonymous">anonymous</term>
-    <term name="anonymous" form="short">anon</term>
+    <term name="anonymous" form="short">anon.</term>
     <term name="and others">and others</term>
     <term name="in press">in press</term>
     <term name="online">online</term>
@@ -142,34 +142,34 @@
     </term>
     
     <!-- SHORT LOCATOR FORMS -->
-    <term name="book" form="short">bk</term>
-    <term name="chapter" form="short">chap</term>
-    <term name="column" form="short">col</term>
-    <term name="figure" form="short">fig</term>
-    <term name="folio" form="short">f</term>
-    <term name="issue" form="short">no</term>
-    <term name="opus" form="short">op</term>
+    <term name="book" form="short">bk.</term>
+    <term name="chapter" form="short">chap.</term>
+    <term name="column" form="short">col.</term>
+    <term name="figure" form="short">fig.</term>
+    <term name="folio" form="short">f.</term>
+    <term name="issue" form="short">no.</term>
+    <term name="opus" form="short">op.</term>
     <term name="page" form="short">
-      <single>p</single>
-      <multiple>pp</multiple>
+      <single>p.</single>
+      <multiple>pp.</multiple>
     </term>
-    <term name="paragraph" form="short">para</term>
-    <term name="part" form="short">pt</term>
-    <term name="section" form="short">sec</term>
+    <term name="paragraph" form="short">para.</term>
+    <term name="part" form="short">pt.</term>
+    <term name="section" form="short">sec.</term>
     <term name="sub verbo" form="short">
-      <single>s.v</single>
-      <multiple>s.vv</multiple>
+      <single>s.v.</single>
+      <multiple>s.vv.</multiple>
     </term>
     <term name="verse" form="short">
-      <single>v</single>
-      <multiple>vv</multiple>
+      <single>v.</single>
+      <multiple>vv.</multiple>
     </term>
     <term name="volume" form="short">
-    	<single>vol</single>
-    	<multiple>vols</multiple>
+    	<single>vol.</single>
+    	<multiple>vols.</multiple>
     </term>
     <term name="edition">edition</term>
-    <term name="edition" form="short">ed</term>
+    <term name="edition" form="short">ed.</term>
     
     <!-- SYMBOL LOCATOR FORMS -->
     <term name="paragraph" form="symbol">
@@ -201,12 +201,12 @@
       <multiple></multiple>
     </term>
     <term name="editor" form="short">
-      <single>ed</single>
-      <multiple>eds</multiple>
+      <single>ed.</single>
+      <multiple>eds.</multiple>
     </term>
     <term name="translator" form="short">
-      <single>tran</single>
-      <multiple>trans</multiple>
+      <single>tran.</single>
+      <multiple>trans.</multiple>
     </term>
     
     <!-- VERB ROLE FORMS -->
@@ -216,8 +216,8 @@
     <term name="interviewer" form="verb">interview by</term>
     
     <!-- SHORT VERB ROLE FORMS -->
-    <term name="editor" form="verb-short">ed</term>
-    <term name="translator" form="verb-short">trans</term>
+    <term name="editor" form="verb-short">ed.</term>
+    <term name="translator" form="verb-short">trans.</term>
     
     <!-- LONG MONTH FORMS -->
     <term name="month-01">January</term>
@@ -234,17 +234,17 @@
     <term name="month-12">December</term>
     
     <!-- SHORT MONTH FORMS -->
-    <term name="month-01" form="short">Jan</term>
-    <term name="month-02" form="short">Feb</term>
-    <term name="month-03" form="short">Mar</term>
-    <term name="month-04" form="short">Apr</term>
+    <term name="month-01" form="short">Jan.</term>
+    <term name="month-02" form="short">Feb.</term>
+    <term name="month-03" form="short">Mar.</term>
+    <term name="month-04" form="short">Apr.</term>
 	<term name="month-05" form="short">May</term>
-    <term name="month-06" form="short">Jun</term>
-    <term name="month-07" form="short">Jul</term>
-    <term name="month-08" form="short">Aug</term>
-    <term name="month-09" form="short">Sep</term>
-    <term name="month-10" form="short">Oct</term>
-    <term name="month-11" form="short">Nov</term>
-    <term name="month-12" form="short">Dec</term>
+    <term name="month-06" form="short">Jun.</term>
+    <term name="month-07" form="short">Jul.</term>
+    <term name="month-08" form="short">Aug.</term>
+    <term name="month-09" form="short">Sep.</term>
+    <term name="month-10" form="short">Oct.</term>
+    <term name="month-11" form="short">Nov.</term>
+    <term name="month-12" form="short">Dec.</term>
   </locale>
 </terms>
