Localized dates redux implemented.  The one test for it passes.  A bit thin on the testing side, but it seems to work.

--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -2,7 +2,7 @@
 <locale xml:lang="en" xmlns="http://purl.org/net/xbiblio/csl">
   <option name="punctuation-in-quote" value="true"/>
   <date form="text">
-    <date-part name="month" form="short" suffix=" "/>
+    <date-part name="month" suffix=" "/>
     <date-part name="day" suffix=", "/>
     <date-part name="year"/>
   </date>
