--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <locale xml:lang="en" xmlns="http://purl.org/net/xbiblio/csl">
-  <option name="punctuation-in-quote" value="true"/>
+  <style-options punctuation-in-quote="true"/>
   <date form="text">
     <date-part name="month" suffix=" "/>
     <date-part name="day" suffix=", "/>
