Early infrastructure for bibkeys.  Partial fix for second-field-align (was using true, now uses flush, but must account for value of margin as well).

--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -42,6 +42,10 @@
       <single>source</single>
       <multiple>sources</multiple>
     </term>
+    <term name="reference item" form="short">
+      <single>ref</single>
+      <multiple>refs</multiple>
+    </term>
     <term name="no date">n.d.</term>
     <term name="and">and</term>
     <term name="et-al">et al.</term>
