--- a/locale/locales-af-AZ.xml
+++ b/locale/locales-af-AZ.xml
@@ -149,3 +149,9 @@
     <term name="month-12" form="short">Des</term>
   </terms>
 </locale>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
