--- a/locale/locales-de-DE.xml
+++ b/locale/locales-de-DE.xml
@@ -26,6 +26,12 @@
     <term name="cited">zitiert</term>
     <term name="internet">Internet</term>
     <term name="presented at">gehalten auf der</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">Anthropologie</term>
     <term name="astronomy">Astronomie</term>
     <term name="biology">Biologie</term>
