--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -58,6 +58,12 @@
     <term name="cited">cited</term>
     <term name="internet">internet</term>
     <term name="presented at">presented at the</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     
     <!-- CATEGORIES -->
     <term name="anthropology">anthropology</term>
