--- a/locale/locales-fr-FR.xml
+++ b/locale/locales-fr-FR.xml
@@ -26,6 +26,12 @@
     <term name="cited">cité</term>
     <term name="internet">Internet</term>
     <term name="presented at">présenté au</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">anthropologie</term>
     <term name="astronomy">astronomie</term>
     <term name="biology">biologie</term>
