--- a/locale/locales-hu-HU.xml
+++ b/locale/locales-hu-HU.xml
@@ -26,6 +26,12 @@
     <term name="cited">idézi</term>
     <term name="internet">internet</term>
     <term name="presented at">előadás</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">antropológia</term>
     <term name="astronomy">csillagászat</term>
     <term name="biology">biológia</term>
