--- a/locale/locales-nb-NO.xml
+++ b/locale/locales-nb-NO.xml
@@ -26,6 +26,12 @@
     <term name="cited">cited</term>
     <term name="internet">Internett</term>
     <term name="presented at">presentert på</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">antropologi</term>
     <term name="astronomy">astronomi</term>
     <term name="biology">biologi</term>
