--- a/locale/locales-nl-NL.xml
+++ b/locale/locales-nl-NL.xml
@@ -26,6 +26,12 @@
     <term name="cited">geciteerd</term>
     <term name="internet">internet</term>
     <term name="presented at">gepresenteerd bij</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">anthropologie</term>
     <term name="astronomy">astronomie</term>
     <term name="biology">biologie</term>
