--- a/locale/locales-pt-BR.xml
+++ b/locale/locales-pt-BR.xml
@@ -26,6 +26,12 @@
     <term name="cited">citado</term>
     <term name="internet">internet</term>
     <term name="presented at">apresentado em</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">antropologia</term>
     <term name="astronomy">astronomia</term>
     <term name="biology">biologia</term>
