--- a/locale/locales-ro-RO.xml
+++ b/locale/locales-ro-RO.xml
@@ -26,6 +26,12 @@
     <term name="cited">citat</term>
     <term name="internet">internet</term>
     <term name="presented at">prezentat la</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">antropologie</term>
     <term name="astronomy">astronomie</term>
     <term name="biology">biologie</term>
