--- a/locale/locales-sk-SK.xml
+++ b/locale/locales-sk-SK.xml
@@ -26,6 +26,12 @@
     <term name="cited">cit</term>
     <term name="internet">internet</term>
     <term name="presented at">prezentované na</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">antropológia</term>
     <term name="astronomy">astronómia</term>
     <term name="biology">biológia</term>
