--- a/locale/locales-sl-SI.xml
+++ b/locale/locales-sl-SI.xml
@@ -26,6 +26,12 @@
     <term name="cited">citirano</term>
     <term name="internet">internet</term>
     <term name="presented at">predstavljeno na</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">antropologija</term>
     <term name="astronomy">astronomija</term>
     <term name="biology">biologija</term>
