--- a/locale/locales-sr-RS.xml
+++ b/locale/locales-sr-RS.xml
@@ -26,6 +26,12 @@
     <term name="cited">цитирано</term>
     <term name="internet">Интернет</term>
     <term name="presented at">представљено на</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">антропологија</term>
     <term name="astronomy">астрономија</term>
     <term name="biology">биологија</term>
