--- a/locale/locales-tr-TR.xml
+++ b/locale/locales-tr-TR.xml
@@ -26,6 +26,12 @@
     <term name="cited">kaynak</term>
     <term name="internet">internet</term>
     <term name="presented at">sunulan</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">antropoloji</term>
     <term name="astronomy">astronomi</term>
     <term name="biology">biyoloji</term>
