--- a/locale/locales-uk-UA.xml
+++ b/locale/locales-uk-UA.xml
@@ -26,6 +26,12 @@
     <term name="cited">cited</term>
     <term name="internet">інтернет</term>
     <term name="presented at">presented at the</term>
+    <term name="ad">AD</term>
+    <term name="bc">BC</term>
+    <term name="season-01">Spring</term>
+    <term name="season-02">Summer</term>
+    <term name="season-03">Autumn</term>
+    <term name="season-04">Winter</term>
     <term name="anthropology">антропологія</term>
     <term name="astronomy">астрономія</term>
     <term name="biology">біологія</term>
