Pretty-much final bugfixes and adjustments.  Also setting up to process a range-delimiter attribute on the date-part element (not yet in CSL), which allows ranged numeric dates to be handled gracefully.

--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -8,8 +8,8 @@
   </date>
   <date form="numeric">
     <date-part name="year"/>
-    <date-part name="month" form="numeric" prefix="-"/>
-    <date-part name="day" prefix="-"/>
+    <date-part name="month" form="numeric" prefix="-" range-delimiter="/"/>
+    <date-part name="day" prefix="-" range-delimiter="/"/>
   </date>
   <terms>
     <term name="open-quote">“</term>
