Test of ECLAC style with experimental un-sales-number variable and related additions to locale terms.  Also clears up spidermonkey test failure that emerged with last checkin.

--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -12,6 +12,8 @@
     <date-part name="day" prefix="-" range-delimiter="/"/>
   </date>
   <terms>
+    <term name="un-sales-number-label">U.N. Sales No.</term>
+    <term name="collection-label">No.</term>
     <term name="open-quote">“</term>
     <term name="close-quote">”</term>
     <term name="open-inner-quote">‘</term>
