Add some experimental terms for use with identifiers.

--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -12,8 +12,10 @@
     <date-part name="day" prefix="-" range-delimiter="/"/>
   </date>
   <terms>
+    <term name="document-number-label">No.</term>
+    <term name="document-number-authority-suffix">Doc.</term>
     <term name="un-sales-number-label">U.N. Sales No.</term>
-    <term name="collection-label">No.</term>
+    <term name="collection-number-label">No.</term>
     <term name="open-quote">“</term>
     <term name="close-quote">”</term>
     <term name="open-inner-quote">‘</term>
