--- a/locale/locales-es-ES.xml
+++ b/locale/locales-es-ES.xml
@@ -218,29 +218,29 @@
     <term name="interviewer" form="verb">interview by</term>
     <term name="editor" form="verb-short">ed</term>
     <term name="translator" form="verb-short">trad</term>
-    <term name="month-01">Enero</term>
-    <term name="month-02">Febrero</term>
-    <term name="month-03">Marzo</term>
-    <term name="month-04">Abril</term>
-    <term name="month-05">Mayo</term>
-    <term name="month-06">Junio</term>
-    <term name="month-07">Julio</term>
-    <term name="month-08">Agosto</term>
-    <term name="month-09">Septiembre</term>
-    <term name="month-10">Octubre</term>
-    <term name="month-11">Noviembre</term>
-    <term name="month-12">Diciembre</term>
-    <term name="month-01" form="short">Ene</term>
-    <term name="month-02" form="short">Feb</term>
-    <term name="month-03" form="short">Mar</term>
-    <term name="month-04" form="short">Abr</term>
-    <term name="month-05" form="short">May</term>
-    <term name="month-06" form="short">Jun</term>
-    <term name="month-07" form="short">Jul</term>
-    <term name="month-08" form="short">Ago</term>
-    <term name="month-09" form="short">Sep</term>
-    <term name="month-10" form="short">Oct</term>
-    <term name="month-11" form="short">Nov</term>
-    <term name="month-12" form="short">Dic</term>
+    <term name="month-01">enero</term>
+    <term name="month-02">febrero</term>
+    <term name="month-03">marzo</term>
+    <term name="month-04">abril</term>
+    <term name="month-05">mayo</term>
+    <term name="month-06">junio</term>
+    <term name="month-07">julio</term>
+    <term name="month-08">agosto</term>
+    <term name="month-09">septiembre</term>
+    <term name="month-10">octubre</term>
+    <term name="month-11">noviembre</term>
+    <term name="month-12">diciembre</term>
+    <term name="month-01" form="short">ene</term>
+    <term name="month-02" form="short">feb</term>
+    <term name="month-03" form="short">mar</term>
+    <term name="month-04" form="short">abr</term>
+    <term name="month-05" form="short">may</term>
+    <term name="month-06" form="short">jun</term>
+    <term name="month-07" form="short">jul</term>
+    <term name="month-08" form="short">ago</term>
+    <term name="month-09" form="short">sep</term>
+    <term name="month-10" form="short">oct</term>
+    <term name="month-11" form="short">nov</term>
+    <term name="month-12" form="short">dic</term>
   </terms>
 </locale>
