Term for "with" in locales.

--- a/locale/locales-en-US.xml
+++ b/locale/locales-en-US.xml
@@ -68,6 +68,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     
     <!-- CATEGORIES -->
     <term name="anthropology">anthropology</term>
