--- a/locale/locales-fr-FR.xml
+++ b/locale/locales-fr-FR.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">anthropologie</term>
     <term name="astronomy">astronomie</term>
     <term name="biology">biologie</term>
