--- a/locale/locales-af-ZA.xml
+++ b/locale/locales-af-ZA.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">anthropology</term>
     <term name="astronomy">astronomy</term>
     <term name="biology">biology</term>
