--- a/locale/locales-ar-AR.xml
+++ b/locale/locales-ar-AR.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">علم الإنسان</term>
     <term name="astronomy">علم الفلك</term>
     <term name="biology">علم الأحياء</term>
