--- a/locale/locales-de-DE.xml
+++ b/locale/locales-de-DE.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">Anthropologie</term>
     <term name="astronomy">Astronomie</term>
     <term name="biology">Biologie</term>
