--- a/locale/locales-sk-SK.xml
+++ b/locale/locales-sk-SK.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">antropológia</term>
     <term name="astronomy">astronómia</term>
     <term name="biology">biológia</term>
