--- a/locale/locales-sr-RS.xml
+++ b/locale/locales-sr-RS.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">антропологија</term>
     <term name="astronomy">астрономија</term>
     <term name="biology">биологија</term>
