--- a/locale/locales-sv-SE.xml
+++ b/locale/locales-sv-SE.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">antropologi</term>
     <term name="astronomy">astronomi</term>
     <term name="biology">biologi</term>
