--- a/locale/locales-uk-UA.xml
+++ b/locale/locales-uk-UA.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">антропологія</term>
     <term name="astronomy">астрономія</term>
     <term name="biology">біологія</term>
