--- a/locale/locales-zh-TW.xml
+++ b/locale/locales-zh-TW.xml
@@ -32,6 +32,7 @@
     <term name="season-02">Summer</term>
     <term name="season-03">Autumn</term>
     <term name="season-04">Winter</term>
+    <term name="with">with</term>
     <term name="anthropology">人類學</term>
     <term name="astronomy">天文學</term>
     <term name="biology">生物學</term>
