Bundled code for version change (with correct version set in code).  Ready for 1.0.10 release.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,17 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
+=========================
+Changes in version 1.0.10
+=========================
+
+-------
+Cleanup
+-------
+
+- Checking in bundled code for the last change, upping version
+  in processor code.
+
+
 ========================
 Changes in version 1.0.9
 ========================
